[gd_scene load_steps=8 format=3 uid="uid://dugs4gw0hvyvv"]

[ext_resource type="Script" path="res://Scenes/Enemies/Stonedude/Scripts/stonedude.gd" id="1_4h5f6"]
[ext_resource type="Texture2D" uid="uid://d1g7u88u1l785" path="res://Scenes/Enemies/Stonedude/Images/Stonedude.png" id="1_rf2g0"]
[ext_resource type="Texture2D" uid="uid://ckvi0h1irjhw4" path="res://Scenes/Enemies/Stonedude/Images/Stonedude_shield.png" id="2_x3hsh"]
[ext_resource type="Texture2D" uid="uid://xyuo26qvw26t" path="res://Scenes/Enemies/Stonedude/Images/stone_shadow.png" id="4_4mg5r"]

[sub_resource type="CircleShape2D" id="CircleShape2D_vqo6m"]
radius = 29.1548

[sub_resource type="CircleShape2D" id="CircleShape2D_v75h1"]
radius = 29.0172

[sub_resource type="CircleShape2D" id="CircleShape2D_dejgd"]
radius = 580.194

[node name="Stonedude" type="CharacterBody2D"]
process_mode = 1
script = ExtResource("1_4h5f6")

[node name="StoneBodySprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture = ExtResource("1_rf2g0")

[node name="ShieldSprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture = ExtResource("2_x3hsh")
offset = Vector2(36.335, 0)

[node name="Area2D" type="Area2D" parent="ShieldSprite"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="ShieldSprite/Area2D"]
position = Vector2(14, 0)
polygon = PackedVector2Array(33, -22, 40, -8, 40, 5, 37, 17, 29, 24, 37, 30, 46, 20, 50, 10, 51, -6, 50, -17, 46, -28)

[node name="StoneArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StoneArea"]
shape = SubResource("CircleShape2D_vqo6m")
debug_color = Color(0, 0.588235, 0.686275, 0.4)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_v75h1")
debug_color = Color(0.885571, 0.299886, 0.374875, 0.42)

[node name="Shadowstone" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, 11)
texture = ExtResource("4_4mg5r")

[node name="ShootTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.1

[node name="VisionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="VisionArea"]
shape = SubResource("CircleShape2D_dejgd")

[connection signal="area_entered" from="ShieldSprite/Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="ShieldSprite/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="area_entered" from="StoneArea" to="." method="_on_stone_area_area_entered"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
[connection signal="body_entered" from="VisionArea" to="." method="_on_vision_area_body_entered"]
[connection signal="body_exited" from="VisionArea" to="." method="_on_vision_area_body_exited"]
